[tool.poetry]
name = "lndgrpc"
version = "0.2.3"
description = ""
authors = ["Kornpow <test@email.com>"]

[tool.poetry.dependencies]
python = "3.8"
protobuf = "^3.15.8"
aiogrpc = "^1.8"
googleapis-common-protos = "^1.53.0"
grpcio = "^1.37.0"
grpcio-tools = "^1.37.0"
pdir2 = "^0.3.2"
pandas = "^1.2.4"
protobuf-to-dict = {git = "ssh://git@github.com/wearefair/protobuf-to-dict"}
